<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <EditText
    android:id="@+id/ip_address"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/ip_address"
    android:inputType="phone"
    android:maxLength="15"/>
  <EditText
    android:id="@+id/netmask"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/netmask"
    android:inputType="phone"
    android:maxLength="15"/>
  <EditText
    android:id="@+id/gateway"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/gateway"
    android:inputType="phone"
    android:maxLength="15"/>
  <EditText
    android:id="@+id/dns1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/dns1"
    android:inputType="phone"
    android:maxLength="15"/>
  <EditText
    android:id="@+id/dns2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/dns2"
    android:inputType="phone"
    android:maxLength="15"/>
</merge>