<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <EditText
    android:id="@+id/server"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/server"/>
  <EditText
    android:id="@+id/port"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/port"
    android:inputType="number"
    android:maxLength="5"/>
  <EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username"
    android:inputType="textVisiblePassword"/>
  <EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:inputType="textPassword"/>
</merge>
