<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp" >

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/ssid" />

        <EditText
          android:id="@+id/ssid"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:inputType="textVisiblePassword" />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/password" />

        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:inputType="textPassword" />

        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/use_proxy"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/use_proxy"
          android:textSize="20sp"
          android:checked="false"/>

        <com.electricimp.blinkup.sample.direct.ProxyForm
          android:id="@+id/proxy_form"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="gone"/>

        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/use_static_ip"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/use_static_ip"
          android:textSize="20sp"
          android:checked="false"/>

        <com.electricimp.blinkup.sample.direct.StaticIpForm
          android:id="@+id/static_ip_form"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="gone"/>

        <Button
          android:id="@+id/blinkup_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="sendBlinkup"
          android:text="@string/send_blinkup" />

    </LinearLayout>

</ScrollView>